--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -50,12 +50,12 @@
     {{- end }}
 
     <footer class="post-footer">
-        {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }}
-        <ul class="post-tags">
+        {{/* {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }} */}}
+        {{/* <ul class="post-tags">
             {{- range ($.GetTerms $tags) }}
             <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
             {{- end }}
-        </ul>
+        </ul> */}}
         {{- if (.Param "ShowPostNavLinks") }}
         {{- partial "post_nav_links.html" . }}
         {{- end }}
